--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: medium;
+    font-size: 16px;
 }
 
 body {
@@ -9,12 +9,19 @@ body {
 
 h1 {
     font-size: 3rem;
+    text-align: center;
 }
 
 .container {
     max-width: 40rem;
     background-color: bisque;
     border-radius: 5px;
-    margin: 1rem auto;
+    margin: 3rem auto;
     padding: 1rem;
+}
+
+.output-field {
+    color: rgb(87, 1, 1);
+    text-transform: capitalize;
+    font-size: larger;
 }
